# VLM-Attention-Viz

./: .gitignore  CLAUDE.md  README.md  SPEC.md  extract.py  pyproject.toml
attentionviz/: __main__.py  cli.py  extract.py
attentionviz/models/: base.py
vlm_attention_viz/: __main__.py  cli.py
vlm_attention_viz/models/: __init__.py  qwen3_vl.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: canvas-renderer.ts  color.ts  controls.ts  data-loader.ts  main.ts  types.ts  worker.ts
