[project]
name = "attentionviz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bertviz>=1.4.1",
    "ipykernel>=6.30.1",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "qwen-vl-utils>=0.0.8",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.51.0",
]
